--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@nuxtjs/axios": "^5.12.1",
     "nuxt": "^2.14.0",
     "nuxt-fontawesome": "^0.4.0",
-    "sass-loader": "^9.0.2"
+    "sass-loader": "^9.0.2",
+    "vue-scrollto": "^2.18.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
